@@ -1,7 +1,15 @@
+Tue Feb 19 17:56:57 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/paradigms/PICML/be/BE_Assembly_Generator.h:
+        * MDE/GME/paradigms/PICML/be/BE_Assembly_Generator.cpp:
+        
+          Bug fix where invoke connections were not generated in the 
+          proxy assembly.
+
 Tue Feb 19 17:16:07 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/paradigms/PICML/modelin/Picmlin_App.cpp:
-        
+
           Removed some of the unnecessary command-line options.
 
 Tue Feb 19 16:39:09 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
